# Akila

./: .gitattributes  CMakeLists.txt  README.md
include/akila/: .neuron.h.swp  .synapse.h.swp  activation.h  common.h  net.h  neuron.h  synapse.h
src/: activation.c  main.c  neuron.c
